crates/strider/tests/snapshots/aarch64be__complex__call_uses_call_return.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x210228:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x210248:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "7" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v14" [color="#888888", style=dashed];
  "v14" -> "13" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v15" [color="#888888", style=dashed];
  "v15" -> "13" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "12" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v18" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v18" [color="#888888", style=dashed];
  "v18" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "19" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "1" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "6" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "6" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "23" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
